--- a/config_template.cfg
+++ b/config_template.cfg
@@ -290,8 +290,10 @@ INC_INLET_TYPE= VELOCITY_INLET
 % Damping coefficient for iterative updates at pressure inlets. (0.1 by default)
 INC_INLET_DAMPING= 0.1
 %
-% Impose inlet velocity magnitude in the direction of the normal of the inlet face
+% (Deprecated) Impose inlet velocity magnitude in the direction of the normal of the inlet face
 INC_INLET_USENORMAL= NO
+% Impose inlet velocity magnitude in the direction of the normal of the inlet face
+INLET_USENORMAL= NO
 %
 % List of outlet types for incompressible flows. List length must
 % match number of outlet markers. Options: PRESSURE_OUTLET, MASS_FLOW_OUTLET
