--- a/config_template.cfg
+++ b/config_template.cfg
@@ -290,9 +290,8 @@ INC_INLET_TYPE= VELOCITY_INLET
 % Damping coefficient for iterative updates at pressure inlets. (0.1 by default)
 INC_INLET_DAMPING= 0.1
 %
-% (Deprecated) Impose inlet velocity magnitude in the direction of the normal of the inlet face
-INC_INLET_USENORMAL= NO
-% Impose inlet velocity magnitude in the direction of the normal of the inlet face
+% Impose inlet velocity magnitude in the direction of the normal of the inlet face.
+% used for incompressible velocity inlet and for compressible pressure and mass flow inlets.
 INLET_USENORMAL= NO
 %
 % List of outlet types for incompressible flows. List length must
