--- a/config_template.cfg
+++ b/config_template.cfg
@@ -292,7 +292,7 @@ INC_INLET_DAMPING= 0.1
 %
 % Impose inlet velocity magnitude in the direction of the normal of the inlet face.
 % used for incompressible velocity inlet and for compressible pressure and mass flow inlets.
-INLET_USENORMAL= NO
+INLET_USE_NORMAL= NO
 %
 % List of outlet types for incompressible flows. List length must
 % match number of outlet markers. Options: PRESSURE_OUTLET, MASS_FLOW_OUTLET
