Preliminary implementation: uncorrelated stochastic variables
The Reynolds stress tensor definition is modified to include a random contribution, which is expressed as the curl of a normally-distributed stochastic vector potential.

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -180,6 +180,9 @@ HYBRID_RANSLES= SA_DDES
 %
 % DES Constant (0.65)
 DES_CONST= 0.65
+%
+% Stochastic Backscatter Model (NO, YES)
+STOCHASTIC_BACKSCATTER= NO
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
