--- a/TestCases/ddes/flatplate/ddes_flatplate.cfg
+++ b/TestCases/ddes/flatplate/ddes_flatplate.cfg
@@ -13,9 +13,11 @@
 %
 SOLVER= RANS
 KIND_TURB_MODEL= SA
-HYBRID_RANSLES= SA_EDDES
+HYBRID_RANSLES= SA_DES
+STOCHASTIC_BACKSCATTER= YES
 MATH_PROBLEM= DIRECT
 RESTART_SOL= NO
+RESTART_ITER= 100
 
 % ----------- COMPRESSIBLE AND INCOMPRESSIBLE FREE-STREAM DEFINITION ----------%
 %
@@ -41,7 +43,7 @@ TIME_MARCHING= DUAL_TIME_STEPPING-2ND_ORDER
 %
 % U_inf = 69.4448 - dt*=0.02 - dt=0.000288
 TIME_STEP= 0.000288
-MAX_TIME= 20.0
+MAX_TIME= 5
 UNST_CFL_NUMBER= 0.0
 INNER_ITER= 20
 
@@ -61,7 +63,7 @@ CFL_NUMBER= 10.0
 CFL_ADAPT= NO
 CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
-TIME_ITER= 10
+TIME_ITER= 500
 
 % ----------------------- SLOPE LIMITER DEFINITION ----------------------------%
 %
@@ -103,5 +105,5 @@ VOLUME_ADJ_FILENAME= adjoint
 GRAD_OBJFUNC_FILENAME= of_grad
 SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
-OUTPUT_WRT_FREQ= 1000
+OUTPUT_WRT_FREQ= 1000000
 SCREEN_OUTPUT= (TIME_ITER, INNER_ITER, RMS_DENSITY, RMS_NU_TILDE, LIFT, DRAG, TOTAL_HEATFLUX)
