Adding temperature limits for incompressible solver (#2569)
* enabling relaxation factor

* MLPCpp update

* user option

* adding temperature limits

* removing underrelaxation factor

* only SetDensity if Temperature is false

* cleaning

* additional cleaning

* enabling ComputeUnderRelaxationFactor

* disable ComputeUnderRelaxationFactor

* Update SU2_CFD/include/variables/CIncEulerVariable.hpp

Co-authored-by: Pedro Gomes <38071223+pcarruscag@users.noreply.github.com>

* Update SU2_CFD/include/variables/CIncEulerVariable.hpp

Co-authored-by: Pedro Gomes <38071223+pcarruscag@users.noreply.github.com>

* Update SU2_CFD/src/variables/CIncNSVariable.cpp

Co-authored-by: Pedro Gomes <38071223+pcarruscag@users.noreply.github.com>

* Update Common/include/CConfig.hpp

Co-authored-by: Pedro Gomes <38071223+pcarruscag@users.noreply.github.com>

* fixing renaming and converting to protected varaibles

* updating config_template

* removing trailing space

* adding test case

* updating residuals

---------

Co-authored-by: Pedro Gomes <38071223+pcarruscag@users.noreply.github.com>
Co-authored-by: Cristopher-Morales <c.l.morales.ubal@tue.nl>

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -256,6 +256,9 @@ INC_DENSITY_MODEL= CONSTANT
 % Solve the energy equation in the incompressible flow solver
 INC_ENERGY_EQUATION = NO
 %
+% Temperature limits for incompressible flows (0.0, 5000.0 K by default).
+TEMPERATURE_LIMITS= 0.0, 5000.0
+%
 % Initial density for incompressible flows
 % (1.2886 kg/m^3 by default (air), 998.2 Kg/m^3 (water))
 INC_DENSITY_INIT= 1.2886
