--- a/TestCases/vandv/rans/30p30n/config.cfg
+++ b/TestCases/vandv/rans/30p30n/config.cfg
@@ -63,22 +63,26 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 CFL_NUMBER= 10
 CFL_REDUCTION_TURB= 1.0
 CFL_ADAPT= YES
-CFL_ADAPT_PARAM= ( 1, 1.05, 10, 150 )
+CFL_ADAPT_PARAM= ( 1, 1.05, 10, 400 )
 %
 LINEAR_SOLVER= FGMRES
 LINEAR_SOLVER_PREC= ILU
 LINEAR_SOLVER_ERROR= 0.2
-LINEAR_SOLVER_ITER= 6
+LINEAR_SOLVER_ITER= 8
 %
 MGLEVEL= 0
 NEWTON_KRYLOV= YES
 NEWTON_KRYLOV_IPARAM= ( 500, 0, 1 ) % n0, np, ft
-NEWTON_KRYLOV_DPARAM= ( 0.0, 1e-20, -3, 1e-5, -1 ) % r0, tp, rf, e
+NEWTON_KRYLOV_DPARAM= ( 0.0, 1e-20, -3, 1e-5, -1 ) % r0, tp, rf, e, rnk
 %
 % ------------------------ CONVERGENCE CRITERIA ------------------------- %
 %
-ITER= 20000
+ITER= 2000
 CONV_RESIDUAL_MINVAL= -11.5
+CONV_CAUCHY_ELEMS= 250
+CONV_CAUCHY_EPS= 1e-5
+CONV_FIELD= DRAG, LIFT
+
 %
 % --------------------------- INPUT / OUTPUT ---------------------------- %
 %
