Use symmetry-preserving scheme for Langevin equations
- Implement a skew-symmetric scheme for the discretization of the convective terms in the Langevin equations.
- Fix the seed for the generation of the random source terms at the beginning of the simulation.

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -183,6 +183,9 @@ DES_CONST= 0.65
 %
 % Stochastic Backscatter Model (NO, YES)
 STOCHASTIC_BACKSCATTER= NO
+%
+% Backscatter timescale coefficient (0.001)
+SBS_CTAU= 0.001
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
