modified thermal diffusion

--- a/TestCases/py_wrapper/turbulent_premixed_psi/psi.cfg
+++ b/TestCases/py_wrapper/turbulent_premixed_psi/psi.cfg
@@ -15,7 +15,7 @@ SOLVER= INC_RANS
 KIND_TURB_MODEL= SST
 SST_OPTIONS= V1994m
 
-RESTART_SOL= NO
+RESTART_SOL= YES
 
 MGLEVEL= 0
 %
@@ -58,8 +58,8 @@ SPECIFIC_HEAT_CP = 1150
 %
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
-MARKER_HEATFLUX= ( wall_top, 0.0,wall_side,0.0,wall_pipe,0.0, wall_out, 0.0 )
-
+MARKER_HEATFLUX= ( wall_pipe,0.0, wall_out, 0.0 )
+MARKER_ISOTHERMAL= ( wall_top, 300.0,wall_side,300.0)
 % note, case is axisymmetric
 MARKER_SYM= ( symmetry )
 AXISYMMETRIC= YES
@@ -71,7 +71,15 @@ INC_INLET_TYPE=  VELOCITY_INLET
 INC_INLET_DAMPING= 0.1
 MARKER_INLET= ( inlet, 673, 40.0, 1.0,  0.0, 0.0)
 MARKER_INLET_TURBULENT = (inlet, 0.10, 15)
-MARKER_INLET_SPECIES= (inlet, 0.0)
+
+
+MARKER_INLET_SPECIES= (inlet, 0.0, 278000)
+
+
+WALL_SPECIES_TYPE=   wall_side, 0, 1 ,     wall_pipe, 0 , 1 ,     wall_interior , 0  , 1 ,     wall_top  0 , 1
+%WALL_SPECIES_TYPE=   wall_side, FLUX, VALUE ,     wall_pipe, FLUX , VALUE ,     wall_interior , FLUX  , VALUE ,     wall_top  FLUX , VALUE
+MARKER_WALL_SPECIES= wall_side, 0,-130213, wall_pipe, 0 , 278607 ,wall_interior , 0  , 278607 ,wall_top, 0,-130213
+
 %
 INC_OUTLET_TYPE= PRESSURE_OUTLET
 INC_OUTLET_DAMPING= 0.1
@@ -84,7 +92,6 @@ NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 CFL_NUMBER= 2.00
 CFL_REDUCTION_SPECIES= 1.0
 CFL_REDUCTION_TURB= 1.0
-%CFL_ADAPT= YES
 CFL_ADAPT= YES
 CFL_ADAPT_PARAM= ( 0.95, 1.01, 1.0, 250, 1.0e-4, 0)
 %
@@ -94,7 +101,7 @@ ITER= 1
 %
 LINEAR_SOLVER= FGMRES
 LINEAR_SOLVER_PREC= ILU
-LINEAR_SOLVER_ERROR= 1E-12
+LINEAR_SOLVER_ERROR= 1E-10
 LINEAR_SOLVER_ITER= 10
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
@@ -121,10 +128,14 @@ SLOPE_LIMITER_SPECIES = NONE
 %
 TIME_DISCRE_SPECIES= EULER_IMPLICIT
 %
-SPECIES_INIT= 0.0
+
+
+SPECIES_INIT= 0.0, 200000
+
+
 SPECIES_CLIPPING= YES
-SPECIES_CLIPPING_MIN= 0.0
-SPECIES_CLIPPING_MAX= 1.0
+SPECIES_CLIPPING_MIN= 0.0, -1.6e6
+SPECIES_CLIPPING_MAX= 1.0 +1e6
 %
 % -------------------- TURBULENT TRANSPORT ---------------------------------------%
 %
@@ -142,7 +153,7 @@ CONV_STARTITER= 10
 MESH_FILENAME= psi.su2
 %
 SCREEN_OUTPUT= INNER_ITER WALL_TIME \
-               RMS_PRESSURE RMS_VELOCITY-X RMS_VELOCITY-Y RMS_TKE RMS_DISSIPATION RMS_SPECIES_0
+               RMS_PRESSURE RMS_VELOCITY-X RMS_VELOCITY-Y RMS_TKE RMS_DISSIPATION RMS_SPECIES_0, AVG_CFL, LINSOL_ITER,LINSOL_RESIDUAL
 
 SCREEN_WRT_FREQ_INNER= 1
 %
