--- a/config_template.cfg
+++ b/config_template.cfg
@@ -186,6 +186,18 @@ STOCHASTIC_BACKSCATTER= NO
 %
 % Backscatter timescale coefficient (0.001)
 SBS_CTAU= 0.001
+%
+% Decaying Isotropic Homogeneous Turbulence (DIHT) simulation (NO, YES)
+DIHT= NO
+%
+% Domain length in x, y and z directions for DIHT (non-dimensional, based on the reference length)
+DIHT_DOMAIN_LENGTH= (1.0, 1.0, 1.0)
+%
+% Number of points in x, y and z directions for DIHT (non-dimensional)
+DIHT_NPOINT= (1, 1, 1)
+%
+% Number of Fourier modes for DIHT
+DIHT_NUM_MODES= 1000
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
