Fix options for DIHT
- Implement flag to enforce LES in the whole domain.
- Add option to set the LES filter width to a user-specified value.
- Add velocity divergence to volume outputs.
- Remove internal generation of initial velocity field for simulating the Decaying Isotropic Homogeneous Turbulence (DIHT).

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -181,23 +181,17 @@ HYBRID_RANSLES= SA_DDES
 % DES Constant (0.65)
 DES_CONST= 0.65
 %
+% User-specified LES filter width (if negative, it is computed based on the local cell size, default -1.0)
+LES_FILTER_WIDTH= -1.0
+%
 % Stochastic Backscatter Model (NO, YES)
 STOCHASTIC_BACKSCATTER= NO
 %
 % Backscatter timescale coefficient (0.001)
 SBS_CTAU= 0.001
 %
-% Decaying Isotropic Homogeneous Turbulence (DIHT) simulation (NO, YES)
-DIHT= NO
-%
-% Domain length in x, y and z directions for DIHT (non-dimensional, based on the reference length)
-DIHT_DOMAIN_LENGTH= (1.0, 1.0, 1.0)
-%
-% Number of points in x, y and z directions for DIHT (non-dimensional)
-DIHT_NPOINT= (1, 1, 1)
-%
-% Number of Fourier modes for DIHT
-DIHT_NUM_MODES= 1000
+% Enforce LES mode in Hybrid RANS-LES Simulations (NO, YES)
+ENFORCE_LES= NO
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
