Update regression config

--- a/TestCases/rans/naca0012/turb_NACA0012_sst_umuscl.cfg
+++ b/TestCases/rans/naca0012/turb_NACA0012_sst_umuscl.cfg
@@ -16,7 +16,7 @@ SOLVER= RANS
 KIND_TURB_MODEL= SST
 SST_OPTIONS= V1994m
 MATH_PROBLEM= DIRECT
-RESTART_SOL= YES
+RESTART_SOL= NO
 READ_BINARY_RESTART= NO
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
