Branch creation for FIML

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -21,6 +21,12 @@ SOLVER= EULER
 % Specify turbulence model (NONE, SA, SST)
 KIND_TURB_MODEL= NONE
 %
+% Specify Reynolds Stress Tensor (RST) turbulence model (NONE, POPE)
+KIND_RST_MODEL= NONE
+%
+% Specify the number of coefficients in Pope's expansion (max 10)
+NBPOPECOEFFS= 0
+%
 % Specify versions/corrections of the SST model (V2003m, V1994m, VORTICITY, KATO_LAUNDER, UQ, SUSTAINING, COMPRESSIBILITY-WILCOX, COMPRESSIBILITY-SARKAR, DIMENSIONLESS_LIMIT)
 SST_OPTIONS= NONE
 %
@@ -954,6 +960,9 @@ INV_DESIGN_CP= NO
 %
 % Evaluate an inverse design problem using heat flux (NO, YES)
 INV_DESIGN_HEATFLUX= NO
+%
+% Evaluate an inverse design problem using FIML techniques  (NO, YES)
+INV_DESIGN_FIML= NO
 
 % ----------------------- BODY FORCE DEFINITION -------------------------------%
 %
@@ -1412,7 +1421,8 @@ RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
 %                                             TORQUE, TOTAL_HEATFLUX, CUSTOM_OBJFUNC
 %                                             MAXIMUM_HEATFLUX, INVERSE_DESIGN_PRESSURE,
 %                                             INVERSE_DESIGN_HEATFLUX, SURFACE_TOTAL_PRESSURE,
-%                                             SURFACE_MASSFLOW, SURFACE_STATIC_PRESSURE, SURFACE_MACH)
+%                                             SURFACE_MASSFLOW, SURFACE_STATIC_PRESSURE, SURFACE_MACH,
+%                                             INVERSE_DESIGN_VELOCITY_FIML, INVERSE_DESIGN_RST_FIML)
 % For a weighted sum of objectives: separate by commas, add OBJECTIVE_WEIGHT and MARKER_MONITORING in matching order.
 OBJECTIVE_FUNCTION= DRAG
 %
@@ -1927,7 +1937,7 @@ GEO_MODE= FUNCTION
 %                      FFD_SETTING, FFD_NACELLE,
 %                      FFD_CONTROL_POINT, FFD_CAMBER, FFD_THICKNESS, FFD_TWIST
 %                      FFD_CONTROL_POINT_2D, FFD_CAMBER_2D, FFD_THICKNESS_2D,
-%                      HICKS_HENNE, SURFACE_BUMP, SURFACE_FILE)
+%                      HICKS_HENNE, SURFACE_BUMP, SURFACE_FILE, FIML)
 DV_KIND= FFD_SETTING
 %
 % Marker of the surface in which we are going apply the shape deformation
@@ -1952,7 +1962,8 @@ DV_MARKER= ( airfoil )
 % - FFD_THICKNESS_2D ( FFD_BoxTag, i_Ind )
 % - HICKS_HENNE ( Lower Surface (0)/Upper Surface (1)/Only one Surface (2), x_Loc )
 % - SURFACE_BUMP ( x_Start, x_End, x_Loc )
-DV_PARAM= ( 1, 0.5 )
+% - FIML (beta)
+DV_PARAM= ( 1, 0.5)
 %
 % Value of the shape deformation
 DV_VALUE= 0.01
@@ -2003,6 +2014,14 @@ STRESS_PENALTY_PARAM= (1.0, 10.0)
 %
 % Preaccumulation in the AD mode.
 PREACC= YES
+
+% ---------------- AUTOMATIC DIFFERENTIATION (TAPE TEST DEBUG MODE) -------------------%
+%
+% Specify the kind of tape that is checked (OBJECTIVE_FUNCTION_TAPE, FULL_SOLVER_TAPE)
+CHECK_TAPE_TYPE= FULL_SOLVER_TAPE
+%
+% Specify the variables for which the tape is checked (SOLVER_VARIABLES, SOLVER_VARIABLES_AND_MESH_COORDINATES, SOLVER_VARIABLES_AND_BETA_FIML)
+CHECK_TAPE_VARIABLES= SOLVER_VARIABLES
 
 % ---------------- PRESTRETCH FOR STRUCTURES -------------------%
 % Consider a prestretch in the structural domain
