--- a/TestCases/disc_adj_rans/naca0012/turb_NACA0012_sst.cfg
+++ b/TestCases/disc_adj_rans/naca0012/turb_NACA0012_sst.cfg
@@ -68,6 +68,7 @@ LINEAR_SOLVER_ITER= 10
 %
 CONV_NUM_METHOD_FLOW= ROE
 MUSCL_FLOW= YES
+MUSCL_KAPPA_FLOW= 0.5
 SLOPE_LIMITER_FLOW= NONE
 JST_SENSOR_COEFF= ( 0.5, 0.02 )
 TIME_DISCRE_FLOW= EULER_IMPLICIT
@@ -76,6 +77,7 @@ TIME_DISCRE_FLOW= EULER_IMPLICIT
 %
 CONV_NUM_METHOD_TURB= SCALAR_UPWIND
 MUSCL_TURB= NO
+MUSCL_KAPPA_TURB= 0.0
 SLOPE_LIMITER_TURB= NONE
 TIME_DISCRE_TURB= EULER_IMPLICIT
 CFL_REDUCTION_TURB= 1.0
