Consistent estimation of turb. kinetic energy (for SA)
- Add consistent evaluation of the turbulent kinetic energy in the random source term appearing in the momentum equations.
- Add backscatter intensity coefficient in the configuration file.
- Add random initialization of the Langevin variables.

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -187,8 +187,11 @@ LES_FILTER_WIDTH= -1.0
 % Stochastic Backscatter Model (NO, YES)
 STOCHASTIC_BACKSCATTER= NO
 %
-% Backscatter timescale coefficient (0.001)
-SBS_CTAU= 0.001
+% Backscatter timescale coefficient (0.05)
+SBS_TIMESCALE_COEFF= 0.05
+%
+% Backscatter intensity coefficient (1.0)
+SBS_INTENSITY_COEFF= 1.0
 %
 % Enforce LES mode in Hybrid RANS-LES Simulations (NO, YES)
 ENFORCE_LES= NO
