Add Laplacian smoothing (Langevin equations)
- Add Laplacian smoothing of source terms in Langevin equations.
Remark: pseudo-time integration is employed (residuals are printed on screen with fixed frequency, the maximum number of time iterations can be defined by the user).

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -187,6 +187,12 @@ LES_FILTER_WIDTH= -1.0
 % Stochastic Backscatter Model (NO, YES)
 STOCHASTIC_BACKSCATTER= NO
 %
+% Backscatter lengthscale coefficient (0.1)
+SBS_LENGTHSCALE_COEFF= 0.1
+%
+% Maximum number of smoothing iterations for SBS model (100)
+SBS_MAX_ITER_SMOOTH= 100
+%
 % Backscatter timescale coefficient (0.05)
 SBS_TIMESCALE_COEFF= 0.05
 %
